// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inline backend passes custom class names 1`] = `
<button
  className="Button__ custom-class-name"
  style={
    Object {
      "padding": 10,
    }
  }
/>
`;

exports[`inline backend passes custom classes  1`] = `
<button
  className="Button__ custom-class-name"
  style={
    Object {
      "padding": 10,
    }
  }
/>
`;

exports[`inline backend passes custom styles  1`] = `
<button
  className="Button__"
  style={
    Object {
      "color": "red",
      "padding": 10,
    }
  }
/>
`;

exports[`inline backend renders style attribute and debug class name 1`] = `
<button
  className="Button__"
  style={
    Object {
      "padding": 10,
    }
  }
/>
`;

exports[`inline backend renders the alt styles and debug class 1`] = `
<button
  className="Button__ red__"
  style={
    Object {
      "backgroundColor": "red",
      "padding": 10,
    }
  }
/>
`;

exports[`inline backend renders the combined styles for extended components 1`] = `
<button
  className="RoundButton__"
  style={
    Object {
      "borderRadius": 10,
      "padding": 10,
    }
  }
/>
`;
